# Linumes

./: .cdtbuild_initial  .cdtproject  .cproject  .cvsignore  .gitignore  .project  .project_initial  CMakeLists.txt  LinumesConfiguration.xml  LinumesConfiguration.yaml  README.md  README.txt  Themes.README  jublo.xml  themelist.xml
.claude/: settings.json
Themes/: bubblegum_theme.xml  citrusblend_theme.xml  desktop_theme.xml  nature_theme.xml  onelaptop_theme.xml  racer_theme.xml  racer_theme.yaml
Themes/bubblegum/: bg_hud.xml
Themes/citrus_blend/: spritely_hud.xml  stadam-whereareyou-beats-219.xml
Themes/desktop_theme/: desktop_hud.xml
Themes/nature_theme/: nature_hud.xml
Themes/onelaptop/: olpc_hud.xml  onelaptop-139.xml
Themes/racer_theme/: racer_hud.xml
base/: base_hud.xml  configurationselections.xml  highscores.xml  highscores.yaml  modeselections.xml
resources/: jublo.yaml  themelist.yaml
resources/Themes/: bubblegum_theme.yaml  citrusblend_theme.yaml  desktop_theme.yaml  nature_theme.yaml  onelaptop_theme.yaml  racer_theme.yaml
resources/Themes/bubblegum/: LaviniaJonesColourCreativity.mp3.License  bg_hud.yaml
resources/Themes/citrus_blend/: St Adam - Where Are You - License.txt  spritely_hud.yaml
resources/Themes/desktop_theme/: thespiritoflight_-_Slippershell_kristen_hersh.license.txt
resources/Themes/nature_theme/: bt.mp3.cc.license.txt  nature_hud.yaml
resources/Themes/onelaptop/: font-LICENSE  mp3-License.txt  olpc_hud.yaml
resources/Themes/racer_theme/: Hot Street License.txt  racer_hud.yaml
resources/base/: .cvsignore  base_hud.yaml  configurationselections.yaml  highscores.yaml  modeselections.yaml
src/framework/: AudioInfo.cpp  AudioInfo.h  AudioManager.cpp  AudioManager.h  AudioResource.cpp  AudioResource.h  BaseResource.h  BaseTextDisplay.cpp  BaseTextDisplay.h  Configuration.cpp  Configuration.h  ConfigurationTypes.h  FFT.cpp  FFT.h  FileTheme.cpp  FileTheme.h  FileUtils.cpp  FileUtils.h  Font.cpp  Font.cpp.new  Font.h  FontInfo.cpp  FontInfo.h  FontInfoBuilder.cpp  FontInfoBuilder.h  FontResource.cpp  FontResource.h  FontTypes.h  GenericResource.h  MediaConfigurationTypes.h  MediaManager.cpp  MediaManager.h  Mode.cpp  Mode.h  ModeManager.cpp  ModeManager.h  MusicResource.cpp  MusicResource.h  OpenGLHeaders.h  OpenGLUtils.cpp  (+55 more)
src/linumes/: BackgroundTemplate.h  BaseTextTypes.h  Block.cpp  Block.h  BlockMesh.cpp  BlockMesh.h  BoardTypes.h  ConfigurationBoard.cpp  ConfigurationBoard.h  ConfigurationMode.cpp  ConfigurationMode.h  FadingForeground.cpp  FadingForeground.h  GameBoard.cpp  GameBoard.h  GameBoardScreenSaver.cpp  GameBoardScreenSaver.h  GameMode.cpp  GameMode.h  GamePiece.cpp  GamePiece.h  Grid.cpp  Grid.h  HUD.cpp  HUD.h  HUDTextTypes.h  HighScoreManager.cpp  HighScoreManager.h  HighScoreTable.cpp  HighScoreTable.h  HighScoreTypes.h  Icon.cpp  Icon.h  Linumes.cpp  LinumesModeManager.cpp  LinumesModeManager.h  LinumesThemeManager.cpp  LinumesThemeManager.h  MagicBlock.cpp  MagicBlock.h  (+25 more)
src/linumes/boss/: Boss.cpp  Boss.h  BossBoard.cpp  BossBoard.h  BossIcon.cpp  BossIcon.h  BossMode.cpp  BossMode.h  BossModeTypes.h  BossPiece.cpp  BossPiece.h
xmms/: fft.c
